load("//tools:csharp_rules.bzl", "checknote_csharp_library")

package(default_visibility = ["//visibility:private"])

checknote_csharp_library(
    name = "infrastructure",
    srcs = glob(["**/*.cs"]),
    deps = [
        "//api/src/Modules/Users/Application:application",
        "//api/src/Modules/Users/Domain:domain",
        "@paket.main//microsoft.entityframeworkcore",
        "@paket.main//microsoft.entityframeworkcore.relational",
        "@paket.main//microsoft.entityframeworkcore.sqlserver",
    ],
    out = "Checknote.Modules.Users.Infrastructure",
    project_sdk = "web",
    target_frameworks = ["net10.0"],
    visibility = ["//api:users_infrastructure_consumers"],
)
