load("@rules_dotnet//dotnet:defs.bzl", "csharp_library")

package(default_visibility = ["//visibility:private"])

csharp_library(
    name = "presentation",
    srcs = glob(["**/*.cs"]),
    deps = [
        "//api/src/Modules/Users/Application:application",
        "//api/src/Modules/Users/Domain:domain",
    ],
    out = "Checknote.Modules.Users.Presentation",
    project_sdk = "web",
    run_analyzers = False,
    target_frameworks = ["net9.0"],
    visibility = ["//api:users_presentation_consumers"],
)
