load("//tools:cdev_architecture.bzl", "cdev_layer")

package(default_visibility = ["//visibility:private"])

cdev_layer(
    name = "application",
    area = "module",
    layer = "application",
    module = "todos",
    srcs = glob(["**/*.ts"]),
    deps = [
        "//cdev/src/common/application",
        "//cdev/src/common/domain",
        "//cdev/src/modules/todos/domain",
    ],
    visibility = ["//cdev:todos_application_consumers"],
)
